# ssm-foundations

./: .editorconfig  .env  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  CURRENT_WORK.md  LICENSE  LICENSE-CONTENT  Makefile  README.md  STYLE.md  astro.config.mjs  bibliography.bib  package-lock.json  package.json  pytest.ini  wrangler.jsonc  wrangler.toml
.claude/: README.md  settings.json
.claude/agents/: chapter-auditor.md  citation-link-auditor.md  claim-skeptic.md  companion-verifier.md  prose-pedagogy-reviewer.md
.claude/hooks/: chapter-review-nudge.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: companion_issue.yml  config.yml  content_issue.yml
.github/workflows/: deploy.yml  validate.yml
audits/: 2026-05-25_standards_vs_post_transformers.md  2026-05-26_first-deploy.md  2026-05-27_repo_audit_deeper.md  2026-05-27_repo_content_quality_audit.md  2026-05-29_reconciliation.md  2026-06-04_ch11-runway.md  2026-06-04_ecosystem_checkpoint.md  2026-06-13_post-m6_recheck.md  README.md
companions/: README.md
companions/_shared/: JuliaFormatter.toml  plot_utils.py  post_transformers_mpl.mplstyle  pyproject.toml
companions/ch01/jax/: .gitkeep  coupled_oscillators.py  damped_oscillator.py  matrix_exponential.py
companions/ch01/julia/: .gitkeep
companions/ch01/torch/: .gitkeep  matrix_exponential.py
companions/ch02/jax/: .gitkeep  lyapunov_qr.py  stability_regions.py
companions/ch02/julia/: .gitkeep
companions/ch02/torch/: .gitkeep  lyapunov_qr.py
companions/ch03/jax/: .gitkeep  condition_number.py  structured_matrices.py
companions/ch03/julia/: .gitkeep
companions/ch03/torch/: .gitkeep  condition_number.py
companions/ch04/jax/: discretization_comparison.py  exp_trapezoidal.py
companions/ch04/julia/: Manifest.toml  Project.toml  discretization_atlas.jl  runtests.jl
companions/ch04/torch/: discretization_comparison.py  exp_trapezoidal.py
companions/ch05/jax/: order_verification.py  stability_regions.py
companions/ch05/julia/: Manifest.toml  Project.toml  butcher_tableau_zoo.jl  runtests.jl
companions/ch05/torch/: order_verification.py  stability_regions.py
companions/ch06/jax/: stiff_demo.py  symplectic_demo.py
companions/ch06/julia/: Project.toml  implicit_methods.jl  runtests.jl  symplectic_methods.jl
companions/ch06/torch/: stiff_demo.py  symplectic_demo.py
companions/ch07/jax/: hippo_matrix.py  hippo_reconstruction.py
companions/ch07/julia/: Manifest.toml  Project.toml  hippo_legendre.jl  runtests.jl
companions/ch07/torch/: hippo_operator.py
companions/ch08/jax/: s4_core.py  s4_duality.py  s4_kernel_cost.py  s4d_kernel.py  s5_scan.py
companions/ch08/torch/: s4d_kernel.py  s5_sequential.py
companions/ch09/jax/: selective_scan_demo.py  selective_ssm.py  selective_vs_lti.py  ssd_semiseparable.py
companions/ch09/torch/: selective_ssm.py  ssd_matmul.py
companions/ch10/jax/: complex_state.py  discretization.py  trapezoidal_ssd.py
companions/ch10/julia/: Project.toml  discretization.jl  runtests.jl
companions/ch10/torch/: complex_state.py  discretization.py
companions/ch11/jax/: fftconv.py  gated_linear_attention.py  linear_attention.py  mqar_recall.py
companions/ch11/julia/: Manifest.toml  Project.toml  fftconv.jl  runtests.jl
companions/ch11/torch/: fftconv.py  gated_linear_attention.py  linear_attention.py
companions/ch12/jax/: chunkwise.py  delta_rule.py  gated_delta.py  longhorn.py  stability.py
docs/: DASHBOARD.md  STATUS.md  m7-pilot-integration-plan.md
docs/briefs/: ch12-delta-rule-lineage.md  ch13-xlstm-rwkv.md  ch14-hybrid-architectures.md  ch15-counter-evidence.md  ch16-empirical-methodology.md  ch17-niche-pilot-integration.md
docs/templates/: chapter-research-brief.md
notebooks/: ch01-matrix-exponential.ipynb
public/notebooks/: ch01-matrix-exponential.html
scripts/: check-bibkeys.mjs  check-xref-labels.mjs  generate-status.mjs  generate-status.test.mjs
src/components/: Tag.astro
src/pages/: index.astro
(+110 files in other folders)
